--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@qu/appointment": ["libs/appointment/src/index.ts"],
       "@qu/identity": ["libs/identity/src/index.ts"],
+      "@qu/review": ["libs/review/src/index.ts"],
       "@qu/role": ["libs/role/src/index.ts"],
       "@qu/service": ["libs/service/src/index.ts"],
       "@qu/staff": ["libs/staff/src/index.ts"]
